--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
 	implementation "org.webjars:webjars-locator-core:0.50"
 	implementation "org.webjars:bootstrap:5.1.3"
+	implementation "com.google.guava:guava:32.0.0-jre"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
